--- a/calculator/index.html
+++ b/calculator/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="/style.css" />
+    <script src="/main.js"></script>
   </head>
   <body>
     <div class="container">
